# SmartPendant

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  Application.cpp  CLAUDE.md  CMakeLists.txt  README.md  STM32F411CEUX_FLASH.ld  SmartPendant.ioc
.github/: FUNDING.yml
Application/: AppMain.cpp  Application.cpp  Application.h  ChangeValueBox.cpp  ChangeValueBox.h  DataWindow.cpp  DataWindow.h  DefCfgUsr.h  DelayControlScr.cpp  DelayControlScr.h  DevCfgUsr.h  DirectControlScr.cpp  DirectControlScr.h  GCodeGeneratorScr.cpp  GCodeGeneratorScr.h  GraphDemo.cpp  GraphDemo.h  GrblComm.cpp  GrblComm.h  Header.cpp  Header.h  IScreen.h  Images.cpp  Images.h  InputDrv.cpp  InputDrv.h  LatheOpsScr.cpp  LatheOpsScr.h  Little-C.cpp  Little-C.h  Menu.cpp  Menu.h  MillOpsScr.cpp  MillOpsScr.h  MsgBox.cpp  MsgBox.h  NVM.cpp  NVM.h  OverrideCtrlScr.cpp  OverrideCtrlScr.h  (+17 more)
DevCore/: DevCfg.cpp  DevCfg.h
DevCore/Display/: DisplayDrv.cpp  DisplayDrv.h  FT6236.cpp  FT6236.h  Font.h  GC9A01.cpp  GC9A01.h  ILI9341.cpp  ILI9341.h  ILI9488.cpp  ILI9488.h  Image.cpp  Image.h  MultiLineString.cpp  MultiLineString.h  Primitives.cpp  Primitives.h  Strng.cpp  Strng.h  TiledMap.cpp  TiledMap.h  UpdateAreaProcessor.h  VisList.cpp  VisList.h  VisObject.cpp  VisObject.h  XPT2046.cpp  XPT2046.h
DevCore/Drivers/: DwtCycleCounter.cpp  DwtCycleCounter.h  StHalGpio.cpp  StHalGpio.h  StHalIic.cpp  StHalIic.h  StHalSpi.cpp  (+5 more)
Inc/: FreeRTOSConfig.h  bsp_driver_sd.h  fatfs_platform.h  ffconf.h  main.h  sd_diskio.h  sdio.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usbd_cdc_if.h  usbd_desc.h
Release/: SmartPendant.hex
Scripts/: Cut.ls  Drill.ms  Enlarge.ms  Face.ls  Face.ms  Threading.ls  ThreadingInt.ms  Turn.ls  TurnInternal.ls
Src/: bsp_driver_sd.c  dma.c  fatfs.c  fatfs_platform.c  freertos.c  gpio.c  i2c.c  main.c  sd_diskio.c  sdio.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
cmake/: arm_arch.cmake  arm_none_eabi_gcc.cmake
(+69 files in other folders)
